[package]
name = "rs-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
mini-redis = { path = "/home/lsp/Desktop/rust-by-practice/zh-CN/assets/mini-redis" }
bytes = "1"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"