[package]
name = "rsplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [env]
# FFMPEG_PKG_CONFIG_PATH = { name = "/Users/lip0041/Code/rsmpeg/tmp/ffmpeg_build/lib/pkg-config",  force = true}

[dependencies]
rsmpeg = "0.14.1"
sdl2 = "0.35"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
